--- a/src/main/resources/assets/masaadditions/lang/en_us.json
+++ b/src/main/resources/assets/masaadditions/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "masaadditions.gui.button.open_schematics_folder": "Open Schematics Folder",
   "masaadditions.gui.title.save_dragged_schematic": "Save Dragged Schematic File",
-  "masaadditions.gui.button.open_schematics_folder": "Open Schematics Folder"
+  "masaadditions.message.fast_right_click_disabled": "Disable disableFarmlandMaking to use tweakFastRightClick!"
 }
